<resources>
    <string name="app_name">Runplication</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">POND</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_options_show_sortie">Options d\'affichage</string>
    <string name="date_sortie">Date:</string>
    <string name="textOnClick">Clic!</string>
    <string name="buttonNouvelleSortie">Nouvelle Sortie</string>
    <string name="parametres">Paramètres</string>
    <string name="map">Map</string>
    <string name="liste_des_sorties">Historique</string>
    <string name="nouvelle_sortie">Nouvelle sortie</string>
    <string name="unite_distance">  km</string>
    <string name="let_s_run">Let\'s Run !</string>
    <string name="beginActivity">C\'est parti !</string>
    <string name="courage">Courage !</string>
    <string name="date">date :</string>
    <string name="pauseTime">Temps de pause :</string>
    <string name="totalDist">Distance totale :</string>
    <string name="totalTime">Temps de course :</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="resumeRunButton">REPARTIR</string>
    <string name="startOfPauseMessage">On souffle un peu...</string>
    <string name="endOfPauseMessage">C\'est reparti!</string>
    <string name="loadPlanText">Charger un plan de sortie</string>
    <string name="avgSpeed">Vitesse moyenne: </string>
    <string name="speedUnit_km_h">" km/h"</string>
    <string name="secondes">" secondes"</string>
    <string name="resumeSortie">Résumé de la sortie :</string>
</resources>
