<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ensai.runplication.OnRunActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/courage"
        android:id="@+id/text_courage"
        android:background="@color/green"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ici la date"
        android:id="@+id/date"
        android:layout_below="@id/text_courage"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/total_dist"
        android:layout_below="@id/date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/totalDist"
            android:id="@+id/totalDistText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="ici la distance "
            android:id="@+id/totalDist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/unite_distance"
            android:id="@+id/unite_distance"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/total_time"
        android:layout_below="@id/total_dist">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/totalTime"
            android:id="@+id/totalTimeText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="ici la durée"
            android:id="@+id/totalTime"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/pause_time"
        android:layout_below="@id/total_time">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pauseTime"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/pauseTime"
            android:text="ici le temps de pause"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/action_line"
        android:layout_below="@id/pause_time">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pauseButton"
            android:layout_weight="1"
            android:background="@color/orange"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/stopButton"
            android:layout_weight="1"
            android:background="@color/brown"/>/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/mapButton"
        android:layout_below="@id/action_line"/>

</RelativeLayout>
