<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ensai.runplication.StartRunning">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beginActivity"
        android:id="@+id/beginActivityButton"
        android:background="@color/green"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loadPlanText"
        android:id="@+id/loadPlanButton"
        android:layout_below="@id/beginActivityButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parametres"
        android:id="@+id/ParametresButton"
        android:background="@color/orange"
        android:layout_below="@id/loadPlanButton"/>
</RelativeLayout>
